# SynapSight_neural_network_gui

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: default_config.json
examples/import_networks/: good_W.csv  good_W.npy  good_W.npz
src/nnsimviz/: __init__.py  app.py  cli.py  configs.py  event_simulation.py  help_texts.py  io_utils.py  models.py  motif_icons.py  motifs.py  pipeline.py  simulation.py  visualization.py
src/nnsimviz/ui/: __init__.py  constants.py  exports.py  results.py  sidebar.py  style.py
src/nnsimviz/visualization/: __init__.py  common.py  constants.py  event_raster.py  network_graph.py  pca.py  png_export.py
tests/: test_configs.py  test_event_simulation.py  test_models.py  test_motifs.py  test_network_config.py  test_simulation.py  test_simulation_modes_integration.py  test_visualization_and_io.py
