[build-system]
requires = ["hatchling", "editables>=0.5"]
build-backend = "hatchling.build"

[project]
name = "nnsimviz"
version = "0.1.0"
description = "Define, simulate, and visualize simple recurrent neural networks as interactive signed weighted graphs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["neural-network", "simulation", "visualization", "networkx", "plotly", "streamlit"]
authors = [
    { name = "Shira Shvadron" },
    { name = "Tom Houri" },
    { name = "Tomer Daloomi" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "networkx>=3.2",
    "plotly>=5.20",
    "streamlit>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "flake8>=7.0",
]

[project.urls]
Homepage = "https://github.com/shirashvadron/SynapSight_neural_network_gui"
Repository = "https://github.com/shirashvadron/SynapSight_neural_network_gui"
Issues = "https://github.com/shirashvadron/SynapSight_neural_network_gui/issues"

[project.scripts]
nnsimviz = "nnsimviz.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nnsimviz"]

[tool.hatch.build.targets.sdist]
include = [
    "src/nnsimviz",
    "tests",
    "examples",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
